# NachoMemes

./: .editorconfig  .gitignore  .pylintrc  .sad.docker-compose.yml  Dockerfile  LICENSE.txt  README.md  bot.py  corde.config.js  docker-compose.yml  dynamo.py  generate_samples.py  localstore.py  memegenerator.py  mypy.ini  package.json  pyproject.toml  render.py  requirements-dev.txt  requirements.txt  run.py  store.py  templates.json  test.json  test.py  test_render.py  tsconfig.json
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: ci.yml  deploy_production.yaml  deploy_production.yml  deploy_staging.yml  lintandtest.yml  pythonapp.yml
config/: guild.json  layouts.json  messages.json  templates.json
frontend-templating/: editor.html  example_template.json  index.html  list_memes.html  test.json  update_meme.html  utils.js
infrastructure/: deployment.yaml
infrastructure/staging/: ansible.cfg  deploy.yml  inventory.ini  staging-deploy.yml  staging.tf  test.yml  variables.tf
integration-test/: bot.test.js
memegenerator/: memegenerator.py
nachomemes/: __init__.py  __main__.py  bot.py  bot_admin.py.wip  channel_uploader.py  configuration.py  dynamo.py  dynamo_store.py  generate_samples.py  guild_config.py  local_store.py  localstore.py  reflow.py  render.py  run.py  server.py  store.py  style.py  template.py  uploader.py  util.py
nachomemes/static/: utils.js
nachomemes/templates/: list_memes.html  main.html  new_meme.html  update_meme.html
stubs/PIL/: Image.pyi  ImageDraw.pyi  ImageFont.pyi
stubs/discord/: __init__.pyi  abc.py  abc.pyi  channel.pyi  client.pyi  embeds.pyi  flags.pyi  member.pyi  message.py  message.pyi  mixins.pyi  permissions.pyi  role.pyi  user.pyi
stubs/discord/ext/: commands.pyi
stubs/fuzzywuzzy/: process.pyi
terraform/: staging.tf
test/: test.json  test.py  test_reflow.py  test_render.py  testcases.txt
